--- a/form.html
+++ b/form.html
@@ -210,9 +210,9 @@
           <p>Kind</p>
           <div class="question-answer">
             <input type="radio" value="1" id="radio_3" name="kind"/>
-            <label for="radio_3" class="radio"><span>Obligatory</span></label>
+            <label for="radio_3" class="radio"><span>Temptation bundling</span></label>
             <input type="radio" value="0" id="radio_4" name="kind" />
-            <label for="radio_4" class="radio"><span>Unnecessary</span></label>
+            <label for="radio_4" class="radio"><span>Habit stacking</span></label>
           </div>
         </div>
         <div class="item">
